--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <h1 class="site-title">XPRAMT</h1>
             <nav class="main-nav">
                 <ul>
-                    <li><a href="#projects" class="nav-tab active" data-tab="projects">專案介紹</a></li>
+                    <li><a href="#projects" class="nav-tab active" data-tab="projects">專案</a></li>
                     <li><a href="#articles" class="nav-tab" data-tab="articles">文章</a></li>
                     <li><a href="#strawberry" class="nav-tab" data-tab="strawberry">草莓</a></li>
                     <li><a href="#about" class="nav-tab" data-tab="about">關於我</a></li>
@@ -103,7 +103,7 @@
             </div>
 
             <div class="subsection">
-                <h3><i class="fas fa-bug"></i> 常見草莓疾病</h3>
+                <h3><i class="fas fa-bug"></i> 草莓疾病</h3>
                 <div class="info-grid">
                     <div class="card info-card">
                         <h4>灰黴病 (Gray Mold)</h4>
@@ -149,7 +149,15 @@
                 </ul>
                 <p>歡迎透過 GitHub 查看我的專案，或在技術文章區與我交流！</p>
 
-                <!--follow--><a href="fb://page/1545712035725947"/><img height="50" src="https://i.imgur.com/dmou6WG.png"/></a><a href="https://twitter.com/todo635387"/><img height="50" src="https://i.imgur.com/FKvcQiF.png"/></a><a href="https://www.pixiv.net/users/16069721"/><img height="50" src="https://i.imgur.com/sLYNnQO.png"/></a><a href="https://www.youtube.com/channel/UC2LOmTgIoq1mSmmk7EE5xpw"/><img height="50" src="https://i.imgur.com/g9nSOwW.png"/></a><a href="https://space.bilibili.com/692618336/video"/><img height="50" src="https://i.imgur.com/SV9WGxw.png"/></a><a href="https://play.google.com/store/apps/developer?id=XPRAMT"/><img height="50" src="https://i.imgur.com/MBAWxFr.png"/></a><a href="https://github.com/XPRAMT"/><img height="50" src="https://i.imgur.com/tTto2FN.png"/></a><a href="https://www.aplaybox.com/u/106284038"/><img height="45" src="https://i.imgur.com/iqtBAc0.png"/></a><a href="https://greasyfork.org/zh-TW/users/452247-xpramt"/><img height="50" src="https://i.imgur.com/xP0Pz2l.png"/></a>
+                <!--follow--><a href="fb://page/1545712035725947" target="_blank"><img height="50" src="https://i.imgur.com/dmou6WG.png"/></a>
+                <a href="https://twitter.com/todo635387" target="_blank"><img height="50" src="https://i.imgur.com/FKvcQiF.png"/></a>
+                <a href="https://www.pixiv.net/users/16069721" target="_blank"><img height="50" src="https://i.imgur.com/sLYNnQO.png"/></a>
+                <a href="https://www.youtube.com/channel/UC2LOmTgIoq1mSmmk7EE5xpw" target="_blank"><img height="50" src="https://i.imgur.com/g9nSOwW.png"/></a>
+                <a href="https://space.bilibili.com/692618336/video" target="_blank"><img height="50" src="https://i.imgur.com/SV9WGxw.png"/></a>
+                <a href="https://play.google.com/store/apps/developer?id=XPRAMT" target="_blank"><img height="50" src="https://i.imgur.com/MBAWxFr.png"/></a>
+                <a href="https://github.com/XPRAMT" target="_blank"><img height="50" src="https://i.imgur.com/tTto2FN.png"/></a>
+                <a href="https://www.aplaybox.com/u/106284038" target="_blank"><img height="45" src="https://i.imgur.com/iqtBAc0.png"/></a>
+                <a href="https://greasyfork.org/zh-TW/users/452247-xpramt" target="_blank"><img height="50" src="https://i.imgur.com/xP0Pz2l.png"/></a>
             </div>
         </section>
 
