--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
     <main class="site-main">
         <section id="projects" class="content-section active">
-            <h2><i class="fas fa-project-diagram"></i> 專案介紹</h2>
+            <h2><i class="fas fa-project-diagram"></i>專案介紹</h2>
             <div id="project-grid-container" class="project-grid">
                 </div>
         </section>
@@ -40,7 +40,7 @@
         </section>
 
         <section id="strawberry" class="content-section">
-            <h2><i class="fas fa-leaf"></i> 草莓品種</h2>
+            <h2><i class="fas fa-leaf"></i> 草莓</h2>
             <div id="strawberry-grid-container" class="info-grid">
                 </div>
         </section>
