--- a/strawberry_knowledge_base.html
+++ b/strawberry_knowledge_base.html
@@ -184,7 +184,7 @@
                              }
                         });
                     }
-                    return Array.from(tags).sort();
+                    return Array.from(tags).sort((a, b) => a.localeCompare(b, 'zh-TW', { collation: 'zhuyin' }));
                 },
 
                 getCount(catId) {
